1999-10-02  Harri Porten  <porten@kde.org>

	* runtests.cpp: determine pppd version. Will be needed to check
	for support of new features

1999-09-26  Harri Porten  <porten@kde.org>

	* runtests.cpp (ppp_available): Linux kernels >= 2.2.13 will have
	a security hole fixed that breaks our check. Let's simply return true.

1999-08-31  Harri Porten  <porten@kde.org>

	* opener.cpp: unified PAP and CHAP code
	* use KMessageBox::Yes enum

1999-07-22  Harri Porten  <porten@kde.org>

	* connect.cpp: visualize \n as <LF> in setExpect()'s debug messages
	* logviewer: rename `log' variable to `logList' to avoid clash with
	mathematical function on some systems. 
	* logview/loginfo.cpp: added mystrsep() function as strsep()
	replacement which is not POSIX compliant.

1999-07-19  Harri Porten  <porten@kde.org>

	* pppdata.cpp: fixed a cause of those "Timeout expired" errors: if 
	the user never set the speed of the serial port gpppdata would return
	an empty string as speed(). The modem initialization code would
	fall back to 57600 but no speed would be passed to pppd. Whatever
	pppd does in this case (I haven't checked the sources yet) breaks the
	negotiation process.

1999-07-13  Harri Porten  <porten@kde.org>

	* added "Mode 7bit" and "Mode 8bit" script commands for CompuServe
	users. 7bit will simply strip off the highest bit to deal with the
	incoming 7E1 data. Write operations are not affected.
	* modem.cpp: try a tcsendbreak() if tcgetattr() fails. Ask for
	feedback if that solved the "modem is busy" error for anyone.
	* modem.cpp: read data in multiple chunks of up to 200 bytes. This 
	should speed up things and avoid problems with the socket notifier. 

1999-07-11  Harri Porten  <porten@kde.org>

	* connect.cpp: moved some code from readChar() into checkBuffers() 
	to clean up the setExpect() race condition fix.

1999-07-07  Mario Weilguni <mweilguni@kde.org>

	* kppp now finds the icons again

1999-07-06  Harri Porten  <porten@kde.org>
